magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/styles.css
@import url(../chameleon/styles.css);
@import url(splitfeed.css);
@import url(form.css);
@import url(dialog.css);
@import url(actionbar.css);
@import url(lightbox.css);
@import url(tabsheet.css);
@import url(shellmessage.css);
@import url(workbench.css);
@import url(hybridselectiontreetable.css);
@import url(app-preloader.css);
@import url(applauncher.css);
@import url(pulse.css);
@import url(favorites.css);
@import url(shell.css);
@import url(fonts.css);
@import url(uploadfield.css);


body{
    -webkit-user-select: none; /* Disable content selection on mobile safari */
    -webkit-tap-highlight-color: rgba(0,0,0,0); /* Disable grey box when you click on something */
    -webkit-touch-callout: none;/* Remove Callout Context menu when tapping on something */
}

/*
CLZ TODO: Discuss and test.
Was causing problems with actionbar tablet mode - touch events went right through to the treegrid below it.
* {
	-webkit-backface-visibility: hidden;
}
v2
*/

.v-csslayout-container {
	overflow: hidden;
}

.clearfix:after { content: ""; display: table; clear: both; }


.thumbnail {
	border: 1px solid #F0F0F0;
	display:inline-block;
	margin: 3px;
	padding: 5px;
	cursor:pointer;
	overflow:hidden;
}

.thumbnail-image{
	display:block;
	margin: auto;
}

.thumbnail.selected {
	background-color: #AABF2F;
}

.thumbnail:hover {
	border: 1px solid #AABF2F;
}

/* Contact info styles */
.thumbnail-info ul {
    list-style-type: none;
    padding-left: 0;
    width: 220px;
}
.thumbnail-info ul > li {
    margin-bottom:2px;
    margin-right: 3px;
}

.thumbnail-info ul > li span.left  {
    font-weight:bold;
}
.thumbnail-info ul > li span.right  {
    float: right;
}

/*END OF APP LAUNCHER RELATED STYLES*/

/*AdminCentral module styles */
button.btn-dialog-selectCallBack {
	background: none repeat scroll 0px 0px #689600;
	margin-left:10px;
	float: right;
}

/* Checkbox styles */
.v-checkbox,
.gwt-CheckBox {
	cursor: pointer;
}

.v-checkbox > input[type="checkbox"],
.gwt-CheckBox > input[type="checkbox"] {
    position:absolute;
	margin:0;
    padding:0;
    opacity:0;
}

.v-checkbox > label,
.gwt-CheckBox > label {
    display:inline-block;
    width:15px;
    height:15px;
    margin:-2px 0 0 -2px;
}

.v-checkbox > input[type="checkbox"] + label,
.gwt-CheckBox > input[type="checkbox"] + label {
    background-image:url('img/icon-checkbox_off.png'); /* SVG with PNG fallback technique */
    background-image:none, url('img/icon-checkbox_off.svg');
	background-position:0 0;
	background-repeat:no-repeat;
    background-size:15px 15px;
    -o-background-size:15px 15px;
    -webkit-background-size:15px 15px;
}

.v-checkbox > input[type="checkbox"]:checked + label,
.gwt-CheckBox > input[type="checkbox"]:checked + label {
	background-image:url('img/icon-checkbox_on.png');
	background-image:none, url('img/icon-checkbox_on.svg');
}

